Document requirements for reflective access in ExecutorServiceMetrics (#6034)
See https://github.com/micrometer-metrics/micrometer/pull/6008#pullrequestreview-2689545471

Signed-off-by: Johnny Lim <izeye@naver.com>